--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,12 @@
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
     {% with message = get_flashed_messages() %}
-    {% if message %}
-        <ul>
-            <li>{{message}}</li>
-       </ul>
-    {% endif %}
+        {% if message %}
+            <ul>
+                <li>{{message}}</li>
+        </ul>
+        {% endif %}
+    {% endwith %}
     Please enter your secretary email to continue:
     <form action="showSummary" method="post">
         <label for="email">Email:</label>
