--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -23,7 +23,9 @@
             {{ comp['name'] }}<br/>
             Date: {{ comp['date'] }}</br>
             Number of Places: {{ comp['numberOfPlaces'] }}
-            {% if comp['numberOfPlaces']|int >0 %}
+            {% if comp['date'] < date_string %}
+                <a>[This competition already passed]</a>
+            {% elif comp['numberOfPlaces']|int > 0 %}
                 <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {% endif %}
         </li>
