change flashing message with error message and status code

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,9 @@
 </head>
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
-    {% with message = get_flashed_messages() %}
-        {% if message %}
-            <ul>
-                <li>{{message}}</li>
-        </ul>
-        {% endif %}
-    {% endwith %}
+    {% if error %}
+        <li>{{ error }}</li>
+    {% endif %}
     Please enter your secretary email to continue:
     <form action="showSummary" method="post">
         <label for="email">Email:</label>
