--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -24,7 +24,7 @@
                 Date: {{ comp['date'] }}</br>
                 Number of Places: {{ comp['numberOfPlaces'] }}
                 {% if comp['date'] < date_string %}
-                    <a>[This competition already passed]</a>
+                    <a>[The competition {{ comp['name'] }} is already passed]</a>
                 {% elif comp['numberOfPlaces']|int > 0 %}
                     <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
                 {% endif %}
