--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,7 +7,7 @@
 <body>
         <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
 
-    {% with messages = get_flashed_messages()%}
+    {% with messages = get_flashed_messages() %}
     {% if messages %}
         <ul>
        {% for message in messages %}
@@ -15,22 +15,41 @@
         {% endfor %}
        </ul>
     {% endif%}
-    Points available: {{club['points']}}
+    Points available: {{ club['points'] }}
     <h3>Competitions:</h3>
     <ul>
-        {% for comp in competitions%}
+        {% for comp in competitions %}
         <li>
-            {{comp['name']}}<br />
-            Date: {{comp['date']}}</br>
-            Number of Places: {{comp['numberOfPlaces']}}
-            {%if comp['numberOfPlaces']|int >0%}
+            {{ comp['name'] }}<br/>
+            Date: {{ comp['date'] }}</br>
+            Number of Places: {{ comp['numberOfPlaces'] }}
+            {% if comp['numberOfPlaces']|int > 0 %}
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
-            {%endif%}
+            {% endif %}
         </li>
-        <hr />
+        <hr/>
         {% endfor %}
     </ul>
-    {%endwith%}
+    <h3>Clubs:</h3>
+    <ul>
+        {% for other_club in other_clubs %}
+            {% if other_club == club %}
+                <li>
+                    {{ other_club['name'] }} (Your Club)<br/>
+                    Available Points: {{ other_club['points'] }}</br>
+                </li>
+                <hr/>
+            {% else %}
+                <li>
+                    {{ other_club['name'] }}<br/>
+                    Available Points: {{ other_club['points'] }}</br>
+                </li>
+                <hr/>
+            {% endif %}
+        {% endfor %}
+
+    </ul>
+    {% endwith %}
 
 </body>
 </html>
