--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
-    Please enter your secretary email to continue:
+    <a href="{{url_for('displayBoard')}}">Clubs Board</a>
+    <p>Please enter your secretary email to continue:</p>
     <form action="showSummary" method="post">
         <label for="email">Email:</label>
         <input type="email" name="email" id=""/>
