setting up tests files

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -14,8 +14,8 @@
                 <li>{{message}}</li>
             {% endfor %}
         </ul>
-        {% endif%}
-        Points available: {{ club['points'] }}
+        {% endif %}
+        <p>Points available: {{ club['points'] }}</p>
         <h3>Competitions:</h3>
         <ul>
             {% for comp in competitions %}
