--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
     {% if error %}
         <li>{{ error }}</li>
     {% endif %}
-    <a href="{{url_for('displayBoard')}}">Clubs Board</a>
+    <a href="{{url_for('display_board')}}">Clubs Board</a>
     <p>Please enter your secretary email to continue:</p>
-    <form action="showSummary" method="post">
+    <form action="show_summary" method="post">
         <label for="email">Email:</label>
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
