--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -22,10 +22,10 @@
             <li>
                 {{ comp['name'] }}<br/>
                 Date: {{ comp['date'] }}</br>
-                Number of Places: {{ comp['numberOfPlaces'] }}
+                Number of Places: {{ comp['number_of_places'] }}
                 {% if comp['date'] < date_string %}
                     <a>[The competition {{ comp['name'] }} is already passed]</a>
-                {% elif comp['numberOfPlaces']|int > 0 %}
+                {% elif comp['number_of_places']|int > 0 %}
                     <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
                 {% endif %}
             </li>
